--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,21 @@
     "name": "next-sentence/afterbuy-sdk",
     "description": "The AfterbuySDK provides to interact with the Afterbuy XML API",
     "keywords":     ["afterbuy"],
-    "homepage": "http://github.com/next-sentence/afterbuy-sdk",
+    "homepage": "https://github.com/ppalmtag/afterbuy-sdk",
     "license": "MIT",
     "authors": [
         {
             "name": "Petru Binzari",
             "email": "pekya1@gmail.com"
+        },
+        {
+            "name": "Philipp Palmtag",
+            "email": "counthash@hotmail.com"
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "~6.0",
-        "jms/serializer": "^1.1",
-        "monolog/monolog": "~1.12"
+        "guzzlehttp/guzzle": "~7.1",
+        "jms/serializer": "^3.32.6"
     },
     "minimum-stability": "dev",
     "autoload": {
