--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     ],
     "require": {
+        "php": "^7.4 || ^8.0",
         "guzzlehttp/guzzle": "~7.1",
         "jms/serializer": "^3.32.6"
     },
